--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
 
 <ul>
+<li><a href="#8/12/2021">An interview with Mr. Ravikant</a></li>
 <li><a href="https://github.com/Adrianjewell91/how-to-code">How Programmers Think</a></li>
 <li><a href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/">How Music and Coding are So Similar</a></li>
 <li><a href="https://github.com/Adrianjewell91/codesignalstudies">What can Machine Learning Do?</a></li>
@@ -200,6 +201,22 @@
 
   <p>Of course, the keys still have to be played, but they are more of the byproduct rather than the goal.  When it comes down to it, this is the heart of all the different advice laid out for the reader. It is as a friend told me: “Playing the piano is about learning to move oneself, not the piano.” When stated, it feels obvious, but truly it was not obvious until he said it. Hopefully, the personal experiences and concepts laid out here will prompt revelations of a similar kind.</p>
 
+<p>
+	8/12/2021
+	<a name="8/12/2021">An interview with Mr. Ravikant</a></br>
+<p>	It is rare to find solutions that are constructive and nuanced, but it seems that Naval Ravikant has several to offer to the listener. One of them is an alternative to UBI, and another one is a solution to environmental problems. While not all of his opinions rang true to me, at least they had the quality of having been thought through, and could be implemented quite easily. </p>
+
+<p>In first case, he makes a compelling argument for government investment in continuing education.  Rather than give everybody basic income, he proposes that people be entitled to government funded re-education programs. It could be every so often, such every five years. This would ensure that people always have marketable skills, and would solve the problem of getting bored in life. This solution makes a lot of sense because it empowers people, and acknowledges that “We all can’t sit around,” as he humorously stated during the interview. </p>
+
+<p>In his solution to environmental issues, he proposes another good idea. That is, he suggests that companies sell the rights the profits from the environment in same way stock is sold. In this way, the public is incentivized to care for the environment because protecting it becomes lucrative. Now, it sounds great, but my lacking knowledge of the environmental crisis, and of economics in general, makes me less familiar with the details of such a solution. Still, at the very least, it would be easy to implement. This is because the global market infrastructure exists already, so it wouldn’t be hard to add one more commodity. </p>
+
+<p>The interesting thing about these solutions is how they involve government. They could involve government quite a lot, which surprised me because the first thing he said about himself was that he was a capitalist. This is interesting because a common misconception is that capitalism implies small government, when in actuality it implies the protection of private property.  He made this clear through his criticisms of UBI, which ultimately resorts to violating the right of private property, which he thinks is a path to failure.</p>
+
+<p>But, policy is not the only kind of solution on his mind.  In a final pitch, he tackles a different problem: that of human happiness. With regards to this, he makes an interesting connection, which is that happiness is peace in motion. If one is at peace, anything done will be done happily, and the way to be at peace is to meditate. Meditation, therefore, is the solution to being happy. Now, this idea is more about the nuance of the problem than the nuance of the solution. After all, meditation is easy enough, but seeing the human condition is challenging. For Mr. Ravikant, the present human condition is like an overloaded computer server, and the only way to flush it is the meditate.  It takes time and patience, but eventually it happens, after which the mind reaches a state of peace. It is probably true. </p>
+
+<p>However, not everything he said is true. For example, it does not necessarily hold that relationships are more genuine at a small company. It may in fact follow that human relations are more genuine at a large company because the bureaucracy creates a kind of social order that lacks in small companies.  Actually, this has been my experience to some extent, but in the end, one has to find what works for them. In another vein, hopefully people make the internet work for them, rather than acknowledging Mr. Ravikant’s argument that the left won the culture wars. Culture wars are an ongoing process; the modern one goes back to Vidal and Buckley and hopefully they are continuing to this day. So, not everything Mr. Ravikant said is true.</p>
+
+<p>All in all, it was refreshing to listen to Mr. Ravikant, particularly when he said agreeable things, such as that people should be able to do all the things in life that they want to do. However, one should always be mindful when the pleasingness of a statement is for this reason, more than the argument’s coherence. For example, it would be great to be able to do everything, but success only comes from doing one thing and not other things. How to have both…
 </body>
 
 </html>
