--- a/index.html
+++ b/index.html
@@ -25,13 +25,11 @@
 </head>
 
 <body>
-	<header>Welcome to Crown "Jewell" Automations (<a href="mailto:adrianjewell91@gmail.com"><span>Contact</span></a>)
+	<header>Welcome to Crown "Jewell" Automations (<a href="https://github.com/Adrianjewell91/adrianjewellportfolio/issues"><span>Contact</span></a>)
 	</header>
-  Writings:
-
-
 <ul>
-<li><a href="#8/12/2021">An interview with Mr. Ravikant</a></li>
+	<li><a href="#8/13/2021">Are the aliens here?</a></li>
+<li><a href="#8/12/2021">Response to an interview with Naval Ravikant</a></li>
 <li><a href="https://github.com/Adrianjewell91/how-to-code">How Programmers Think</a></li>
 <li><a href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/">How Music and Coding are So Similar</a></li>
 <li><a href="https://github.com/Adrianjewell91/codesignalstudies">What can Machine Learning Do?</a></li>
@@ -45,6 +43,18 @@
 <li><a href="#7/27/2021">China and Basements</a></li>
 <li><a href="#8/6/2021">How to Play the Piano</a></li>
 </ul>
+	<p>8/13/2021
+	<a name="8/13/2021">Are the aliens here?</a></br>
+	<p>The aliens are here, says Steven Greer. Perhaps he is right, and perhaps he is not. No matter what, the government acknowledges that “something” is in the sky that they don’t know about. At first glance, it was exciting to think that maybe it’s the aliens, but on second thought, it’s just nice to know that the government doesn’t know everything. That’s a good thing, and it would be nice if it stayed that way. Those UAPs can keep flying around in the sky, mystifying the military. </p>
+
+<p>Maybe the aliens are symbolic. After all, the whole point is that knowledge about them is unknown. So, in this sense they could be anything. They could be hallucinations of the mind, or they could really be astrally projected physical entities that visit from out space. The whole point is that we don’t know what they are, and that’s kind of exciting. It is also exciting to think that something out there is mysterious and unexplored, because most things in life are already explored, and those that aren’t explored are things that require responsibility. Owning a house, for instance, is an unexplored experience, but not a care-free one. Aliens, on the other hand, are risk-free. </p>
+
+<p>No matter what, it is ultimately the mind that is unexplored. Regardless of the what the aliens are, the directive is the same: meditate. Meditate and open one’s heart. Also, pay money to see Steve Greer, but that isn’t necessary. It’s kind of like going to college, where the money paid not for knowledge but the degree. Knowledge is free, and so is a connection with the aliens. The money is paid for the work of a human to document it. Still, it is kind of annoying to see a 10$ app after hearing a long spiel about universal connectedness and the like, but people still have to eat.  </p>
+
+<p>So do the aliens, probably…and maybe they take a rain check on some days. After all, it has been tempting to attend one of the CE5 expeditions, but it is expensive, and the reviews are lacking. One review said that when the aliens didn’t appear, Mr. Greer blamed the attendees for not being open minded enough. That doesn’t seem good for business. Knowing this, it makes more sense to try with a friend, and I did. In fact, we did see something unidentifiable. It was a flickering light that spun about low in the sky and then disappeared.  My friend and I both saw it, but weren’t convinced. After all, it looked like a bug, and moreover, if a UFO appeared to us, the airport right down the road would take notice as well. Then the secret would be out.</p>
+
+<p>For others, the secret is already out. One friend told us the universe is so vast that life has to be out there, and probably already knows about Earth. Why not? God is unfathomable, and so are the possibilities in life.  From this perspective, there isn’t much to get excited about, and the directive is once again unchanging: meditate. Still, it would be be cool, as in Ezekiel 1, to see something great and awesome appear from the heavens. </p>
+</p>
   <p>7-2-2021
   <a name="7-2-2021">What’s in a word?</a><br>
 
