--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <header>Welcome to Crown "Jewell" Automations (<a href="https://github.com/Adrianjewell91/adrianjewellportfolio/issues"><span>Contact</span></a>)
 </header>
 <ul>
+<li>	<a href="#8/21/2021">An automated orchestrator for instrumentalists</a></li>
 <li><a href="#8/17/2021">A call for Kubernetes debugging tools</a></li>
 <li><a href="#8/13/2021">Are the aliens here?</a></li>
 <li><a href="#8/12/2021">Response to an interview with Naval Ravikant</a></li>
@@ -44,6 +45,20 @@
 <li><a href="#7/27/2021">China and Basements</a></li>
 <li><a href="#8/6/2021">How to Play the Piano</a></li>
 </ul>
+	<p>
+<a name="#8/21/2021">An automated orchestrator for instrumentalists</a>
+
+	<p>In my opinion, there are many great ideas for software that helps with music making. One of them is a tool for changing the timbre of musical phrases in a pleasing way. This would be at the piano, or any instrument that doesn’t control its timbre, generally speaking, since the timbre is in fact different depending on the voicing, but this is negligible. The truth is that piano is one timbre, but in doesn’t have to be that way. 
+	</p>
+	<p>It would be software for real time performance. The way it would work is that the performer would play the music and the machine would change the timbre of phrases and voices. When a phrase ended and a new one begins, a new timbre would take effect, and ideally this would sound better than the same timbre. The effect would be that the listener would hear an ever changing sound scape of timbres rather than just the piano. It would be a real-time orchestrator, in other words. 
+	</p>
+	<p>To do this would require that the machine know what is going to be played before hand, and perhaps very intimately. This is because the machine needs to know the beginning and ending of phrases, and that is not something even a human can easily know during the first listen of a piece. Therefore, a certain amount of training the software, or ‘prepping’ may be a better word, where the software learns what it going to be played, and it prepares a sort of mental map.
+	</p>
+	<p>Naturally, it’s important to keep some of the spontaneity in performing, so the software wouldn’t have to stick to the same orchestration every time. Ideally it would change and evolve its own interpretation of sorts, and this interpretation can be guided, and certain parts of it reinforced.  Hopefully, it would try out new timbres, and the performer would select which parts were good, which parts added to the intended effect. Speaking of it like this, the software really would add a new layer to classical music making, and probably some would welcome it and others will not.
+	</p>
+	<p>In the end, however, it would be a tool for discovery. The great pianist Vladimir Horowitz said to think orchestrally when at the piano, and his advice is really the essence of this idea. That is, it is to help the pianist connect this music to new sounds, to open up the ears to hear the music in new and diverse ways, to imagine all the possibilities with sound, and perhaps offer a glimpse into what a composer at that time wished sound could be, if technology were better.  	</p>
+	</p>
+
 <p>8/17/2021
 <a name="#8/17/2021">A call for debugging tools</a>
 <p>There are many great debugging tools out there, but there could be many more. One great one that exists already is remote debugging; this really impressed me at first sight because of how many moving parts are required to make it work. There are the two connections to the remote server (one for code syncing and one for communicating the debugging steps), and also the logic of stepping through the code itself. In fact, this example illustrates very well how to combine two good things into one great thing: that is, it combines the concept of debugging with remote syncing. Perhaps, future debugging tools will also arise from new combinations. </p>
@@ -75,13 +90,13 @@
 
   <p>A number of years ago my mother’s friend said that star NBA players work on only one thing at a time, and that the thing in question would be a very small thing. Something like how their fingers touch the ball, or how they distribute pressure on their feet, would be examples of such things. They are little adjustments, but for an expert they make a big difference. For my mother’s friend, being an expert at singing gave her the sense of what little adjustments are needed in her students. In fact, this is probably true for any expert in their respective field.</p>
 
-<p>One thing at which we are all probably experts is communicating, and perhaps this observation applies to this field as well. Since we have all spoken for many years, we know how to use language in the myriad of ways that are available. Similarly, we would agree that some language is appropriate in some places and not appropriate in other places, and we always are tweaking it. Sometimes, it can go too far, such as when authority tries to control speech in a narrow-minded way (and this makes me frustrated).</p>
+<p>One thing at which we are all probably experts is communicating, and perhaps this observation applies to this field as well. Since we have all spoken for many years, we know how to use language in the myriad of ways that are available. Similarly, we would agree that some language is appropriate in some places and not appropriate in other places, and we always are tweaking it. Sometimes it can go too far, such as when an authority tries to control speech in a narrow-minded way (and this makes me frustrated).</p>
 
-  <p>My theory is that this is what is happening in policy around what is appropriate language in the workplace, so I think we should have an open minded approach to it. For example, my company thinks that using the word “America” is a word that is less preferable in usage than something like “The States.” I however, think that this opinion is a little absurd. For example, both words are is a simplification of “The United States Of America”. It doesn’t exclude people, nor is it offensive to use the word “America” in this way.</p>
+  <p>My theory is that this is what is happening in policy around what is appropriate language in the workplace, so I think we should have an open minded approach to it. For example, there is a line of thinking that says using the word “America” is a word that is less preferable in usage than something like “The States.” I however, think that this opinion is a little farfetched. For example, both words are a simplification of “The United States Of America”. It doesn’t exclude people, nor is it offensive to use the word “America” in this way.</p>
 
   <p>Let’s take the proposed alternative and see whether that is any more or less biased. Consider “The States”… Personally, it doesn’t seem any different to me to use this word because this is also shorthand. So, perhaps there is some context for using one word or the other. At the very least, there isn’t only the biased usage of a word, and it would make more sense to recognize that words have many contexts and usages.</p>
 
-  <p>Getting back to experts, any expert will know there are many Americas. There is/are the geographical place(s), there is the trope of the redneck shouting “Amerrhica,” and there is the other trope of Coming to America, the ‘land of opportunity.”  In fact there are many others, so don’t forget to use them for expression. This is my implementation of this particular tweak to American English.</p>
+  <p>Anyone will know there are many Americas. There is/are the geographical place(s), there is the trope of the redneck shouting “Amerrhica,” and there is the other trope of Coming to America from the Eddie Murphy, the ‘land of opportunity.”  In fact there are many others, so don’t forget to use them for expressive purposes. This is my implementation of this particular tweak to American English.</p>
 </p>
 <p>
   7-5-2021
