--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <li><a href="#8/6/2021">How to Play the Piano</a></li>
 </ul>
 	<p>
-<a name="#8/21/2021">An automated orchestrator for instrumentalists</a>
+<a name="8/21/2021">An automated orchestrator for instrumentalists</a>
 
 	<p>In my opinion, there are many great ideas for software that helps with music making. One of them is a tool for changing the timbre of musical phrases in a pleasing way. This would be at the piano, or any instrument that doesn’t control its timbre, generally speaking, since the timbre is in fact different depending on the voicing, but this is negligible. The truth is that piano is one timbre, but in doesn’t have to be that way. 
 	</p>
@@ -60,7 +60,7 @@
 	</p>
 
 <p>8/17/2021
-<a name="#8/17/2021">A call for debugging tools</a>
+<a name="8/17/2021">A call for debugging tools</a>
 <p>There are many great debugging tools out there, but there could be many more. One great one that exists already is remote debugging; this really impressed me at first sight because of how many moving parts are required to make it work. There are the two connections to the remote server (one for code syncing and one for communicating the debugging steps), and also the logic of stepping through the code itself. In fact, this example illustrates very well how to combine two good things into one great thing: that is, it combines the concept of debugging with remote syncing. Perhaps, future debugging tools will also arise from new combinations. </p>
 
 <p>One field in which better debugging tools are greatly needed is in the realm of Kubernetes. Recently, it came to my attention that the flow from external network to the server port was a winding path. First, the server needs to be exposed to the right port through the Docker container. Then, the docker container needs to map to a Server Object, and lastly, an External Ingress needs to connect to the server port. In total, that amounts to at least four, maybe five different ports, and the way that engineers do it currently is to simply read the files and remember them. Naturally, it can be a challenge keep all of this in one’s head.  </p>
