--- a/index.html
+++ b/index.html
@@ -28,22 +28,23 @@
 <header>Welcome to Crown "Jewell" Automations (<a href="https://github.com/Adrianjewell91/adrianjewellportfolio/issues"><span>Contact</span></a>)
 </header>
 <ul>
-<li>	<a href="#8/21/2021">An automated orchestrator for instrumentalists</a></li>
-<li><a href="#8/17/2021">A call for Kubernetes debugging tools</a></li>
-<li><a href="#8/13/2021">Are the aliens here?</a></li>
-<li><a href="#8/12/2021">Response to an interview with Naval Ravikant</a></li>
-<li><a href="https://github.com/Adrianjewell91/how-to-code">How Programmers Think</a></li>
-<li><a href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/">How Music and Coding are So Similar</a></li>
-<li><a href="https://github.com/Adrianjewell91/codesignalstudies">What can Machine Learning Do?</a></li>
-<li><a href="#7-2-2021">What’s in a word?</a></li>
-<li><a href="#7-5-2021">Back Bay Buildings are great.</a></li>
-<li><a href="#7-7-2021">Why programmers do exactly what you tell them.</a></li>
-<li><a href="#7-9-2021">Zhuang Zi and Computer Systems</a></li>
-<li><a href="#7-13-2021">Christianity and the Dao</a></li>
-<li><a href="#7/16/2021">How Buildings are Like Mountains.</a></li>
-<li><a href="#7/21/2021">How everything is about knowledge.</a></li>
-<li><a href="#7/27/2021">China and Basements</a></li>
-<li><a href="#8/6/2021">How to Play the Piano</a></li>
+	<li><a href="https://github.com/Adrianjewell91/martialartshowto/blob/main/README.md">Martial Arts, according to an unnamed master.</a></li>
+	<li><a href="#8/21/2021">An automated orchestrator for instrumentalists</a></li>
+	<li><a href="#8/17/2021">A call for Kubernetes debugging tools</a></li>
+	<li><a href="#8/13/2021">Are the aliens here?</a></li>
+	<li><a href="#8/12/2021">Response to an interview with Naval Ravikant</a></li>
+	<li><a href="https://github.com/Adrianjewell91/how-to-code">How Programmers Think</a></li>
+	<li><a href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/">How Music and Coding are So Similar</a></li>
+	<li><a href="https://github.com/Adrianjewell91/codesignalstudies">What can Machine Learning Do?</a></li>
+	<li><a href="#7-2-2021">What’s in a word?</a></li>
+	<li><a href="#7-5-2021">Back Bay Buildings are great.</a></li>
+	<li><a href="#7-7-2021">Why programmers do exactly what you tell them.</a></li>
+	<li><a href="#7-9-2021">Zhuang Zi and Computer Systems</a></li>
+	<li><a href="#7-13-2021">Christianity and the Dao</a></li>
+	<li><a href="#7/16/2021">How Buildings are Like Mountains.</a></li>
+	<li><a href="#7/21/2021">How everything is about knowledge.</a></li>
+	<li><a href="#7/27/2021">China and Basements</a></li>
+	<li><a href="#8/6/2021">How to Play the Piano</a></li>
 </ul>
 	<p>8/21/2021
 <a name="8/21/2021">An automated orchestrator for instrumentalists</a></br>
