--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <header>Welcome to Crown "Jewell" Automations (<a href="https://github.com/Adrianjewell91/adrianjewellportfolio/issues"><span>Contact</span></a>)
 </header>
 <ul>
+	<li><a href="https://github.com/Adrianjewell91/essays/blob/main/README.md">More essays</a></li>
 	<li><a href="https://github.com/Adrianjewell91/martialartshowto/blob/main/README.md">Martial Arts, according to an unnamed master.</a></li>
 	<li><a href="#8/21/2021">An automated orchestrator for instrumentalists</a></li>
 	<li><a href="#8/17/2021">A call for Kubernetes debugging tools</a></li>
