--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -75,8 +75,9 @@
                             <div class="experience__header">
                                 <div class="experience__header-line">
                                     <div class="experience__title">Wayfair</div>
-                                    <div class="experience__date">2019 - Present
-                                    </div>
+                                    <div class="experience__date">Engineer 2: July 2021 - Present (Full-time)</div>
+                                    </br>
+                                    <div class="experience__date">Engineer 1: Dec. 2019 - July 2021</div>
                                 </div>
                             </div>
                             <div class="experience__description">
@@ -94,7 +95,7 @@
                             <div class="experience__header">
                                 <div class="experience__header-line">
                                     <div class="experience__title">New Elevation - Williams-Sonoma</div>
-                                    <div class="experience__date">2018</div>
+                                    <div class="experience__date">Frontend Software Engineer: Mar. - Dec. 2018 (Full Time)</div>
                                 </div>
                             </div>
                             <div class="experience__description">
@@ -109,14 +110,14 @@
                         <div class="experience__header">
                             <div class="experience__header-line">
                                 <div class="experience__title">App Academy</div>
-                                <div class="experience__date">2019</div>
+                                <div class="experience__date">Technical Instructor/Career Coach: Jan. - Aug. 2019 (Full Time)</div>
                             </div>
                         </div>
                         <div class="experience__description">
                             <div>
                                 <ul>
-                                    <li>Oversaw the design and development of over 100 web applications, from conception to MVP completion, resulting in successful hired job applicants. (Technologies: Ruby on Rails, Node, MongoDB, PostGres, React, Redux, d3.js, REST, Webpack).</li>
-                                    <li>Taught full stack software development and algorithms at App Academy, placing over 100 students.</li>
+                                    <li>Taught full stack software development and algorithms at App Academy, placing over 100 students
+                                        (Technologies: Ruby on Rails, Node, MongoDB, PostGres, React, Redux, d3.js, REST, Webpack).</li>
                                 </ul>
                             </div>
                         </div>
@@ -138,19 +139,20 @@
                                                 sustainability, crypto-currency trading, genetic advising, and supply
                                                 chain.</li>
                                             <li>
-                                                Built tools for music education: <a
-                                                    href="https://github.com/adrianjewell91/theorizer">Theorizer</a>
-                                                and <a href="https://github.com/adrianjewell91/duet-">Duet</a>
-                                                , the former of which was accepted into the Oberlin College start up accelerator program. </li>
-                                            <li>Launched <a href="https://etherscan.io/token/0x4d7e3487e836cb4e402c25506b4ad81e49e93970">IdeaCoin</a>, an ERC-20 compatible crypto-currency.
-                                            </li>
+                                                Built <a
+                                                    href="https://github.com/adrianjewell91/theorizer">Theorizer</a>, an ML-based analyzer for musical scores,
+                                                which was accepted into the Oberlin College start up accelerator program. (Python, Keras, TensorFlow, Django, ReactJS). </li>
+                                            <li>
+                                                Built <a href="https://github.com/adrianjewell91/duet-">Duet</a>, a real-time online piano with collaboration abilities, (JS, Node JS, Websockets).</li>
+                                            <li>Launched <a href="https://etherscan.io/token/0x4d7e3487e836cb4e402c25506b4ad81e49e93970">IdeaCoin</a>, an ERC-20 compatible crypto-currency. (Solidity, Ethereum, Blockchain    ).
+                                            <!-- </li>
                                             <li>State Management: Observations on How Music and Coding are So Similar
                                                 <a
                                                     href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/">(link)</a>
                                                 (gained 42k reads).
-                                            </li>
-                                            <li>Three Part Lecture Series: How Programmers Think <a
-                                                    href="https://github.com/Adrianjewell91/how-to-code">(link)</a>.</li>
+                                            </li> -->
+                                            <!-- <li>Three Part Lecture Series: How Programmers Think <a
+                                                    href="https://github.com/Adrianjewell91/how-to-code">(link)</a>.</li> -->
                                         </ul>
                                     </div>
                                 </div>
@@ -158,40 +160,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="section" style="margin-top: 2em;">
-                    <div class="section__header">
-                        <span>A</span>
-                        <span>C</span>
-                        <span>C</span>
-                        <span>O</span>
-                        <span>L</span>
-                        <span>A</span>
-                        <span>D</span>
-                        <span>E</span>
-                        <span>S</span>
-                    </div>
-                    <div class="section__content">
-                        <div class="experience" style="page-break-inside: avoid;">
-                            <div class="experience__header">
-                                <div class="experience__header-line">
-                                    <div class="experience__title">Hackathon Prize Winner and Team Participant
-                                    </div>
-                                    <div class="experience__date">San Francisco, CA</div>
-                                </div>
-                            </div>
-                            <div class="experience__description">
-                                <ul>
-                                    <li>Won cash prizes, presented full-stack solutions for
-                                        homelessness,
-                                        active-shooter
-                                        emergencies,
-                                        sustainability, crypto-currency trading, genetic advising, and supply
-                                        chain.</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
                 <div class="section">
                     <div class="section__header">
                         <span>E</span>
@@ -231,14 +199,19 @@
                     </div>
                     <div class="section__content">
                         <div class="socials">
-                            <div class="socials__label">Portfolio</div>
+                            <div class="socials__label">Phone</div>
+                            <a class="socials__link setting--primary-text"
+                                href="tel: 6072216266">607-221-6266</a>
+                        </div>
+                        <div class="socials">
+                            <div class="socials__label">Blog</div>
                             <a class="socials__link setting--primary-text"
                                 href="http://www.adrianjewell.com">www.adrianjewell.com</a>
                         </div>
                         <div class="socials">
                             <div class="socials__label">Music Albums</div>
                             <a class="socials__link setting--primary-text"
-                                href="http://www.soundcloud.com/adrianjewell">Listen
+                                href="https://soundcloud.com/adrianjewell/sets">Listen
                                 on Soundcloud.</a>
                         </div>
                         <div class="socials">
@@ -264,48 +237,6 @@
                         <div class="skill">
                             <div class="skill__name">Mandarin Chinese:</div>
                             <div class="skill__name">看，写，说</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="section section--sidebar">
-                    <div class="section__header">
-                        <span>S</span>
-                        <span>K</span>
-                        <span>I</span>
-                        <span>L</span>
-                        <span>L</span>
-                        <span>S</span>
-                    </div>
-                    <div class="section__content">
-                        <div class="skill">
-                            <div class="skill__name">Education</div>
-                            <div class="skill__progress">
-                                <div class="skill__progress-inner" style="width: -20%;"></div>
-                            </div>
-                        </div>
-                        <div class="skill">
-                            <div class="skill__name">Software Engineering</div>
-                            <div class="skill__progress">
-                                <div class="skill__progress-inner" style="width: -20%;"></div>
-                            </div>
-                        </div>
-                        <div class="skill">
-                            <div class="skill__name">Music Composition and Performance</div>
-                            <div class="skill__progress">
-                                <div class="skill__progress-inner" style="width: -20%;"></div>
-                            </div>
-                        </div>
-                        <div class="skill">
-                            <div class="skill__name">Public Speaking</div>
-                            <div class="skill__progress">
-                                <div class="skill__progress-inner" style="width: -20%;"></div>
-                            </div>
-                        </div>
-                        <div class="skill">
-                            <div class="skill__name">Writing</div>
-                            <div class="skill__progress">
-                                <div class="skill__progress-inner" style="width: -20%;"></div>
-                            </div>
                         </div>
                     </div>
                 </div>
