--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Crown Jewell Automations</title>
-	<style>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Crown Jewell Automations</title>
+    <style>
 		html {
 			font-size: 16px;
 		}
@@ -22,19 +25,98 @@
 			}
 		}
 	</style>
+
+    <link rel="stylesheet" href="assets/css/article-lists/article-list-large.css">
+
 </head>
-
 <body>
-<header>Welcome to Crown "Jewell" Automations (<a href="https://github.com/Adrianjewell91/adrianjewellportfolio/issues"><span>Contact</span></a>)
-</header>
-<ul>
-	<li><a href="https://github.com/Adrianjewell91/essays/blob/main/README.md">Essays</a></li>
-	<li><a href="https://github.com/Adrianjewell91/martialartshowto/blob/main/README.md">Martial Arts, according to an unnamed master.</a></li>
-	<li><a href="https://github.com/Adrianjewell91/how-to-code">How Programmers Think</a></li>
-	<li><a href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/">How Music and Coding are So Similar</a></li>
-	<li><a href="https://github.com/Adrianjewell91/codesignalstudies">What can Machine Learning Do?</a></li>
+    <h1>Welcome to the blog for Adrian Jewell!</h1>
+    <ul class="article-list-large">
 
-</ul>
-	</body>
+        <li>
+            <a href="https://github.com/Adrianjewell91/essays/blob/main/README.md">
+                <img src="assets/images/pictures/industrial-mech.jpg" alt="Industrial Mech" />
+            </a>
+            <h2><a href="https://github.com/Adrianjewell91/essays/blob/main/README.md">Assorted Short Essays</a></h2>
+            <p>The spirit, playing the piano, books, China.</p>
+            <span>by <a href="#">Adrian Jewell</a> &middot; Decemeber 2021</span>
+            <div>
+                <a href="https://github.com/Adrianjewell91/essays/blob/main/README.md" class="read-more">Read more &rarr;</a>
+            </div>
+        </li>
+
+        <li>
+            <a href="https://github.com/Adrianjewell91/martialartshowto/blob/main/README.md">
+                <img src="assets/images/pictures/sahale-wa.jpg"  alt="Sahale Wa" />
+            </a>
+            <h2><a href="https://github.com/Adrianjewell91/martialartshowto/blob/main/README.md">What are the Martial Arts?</a></h2>
+            <p>What I have learned from studying martial arts.</p>
+            <span>by <a href="#">Adrian Jewell</a> &middot; September 2021</span>
+            <div>
+                <a href="https://github.com/Adrianjewell91/martialartshowto/blob/main/README.md" class="read-more">Read more &rarr;</a>
+            </div>
+        </li>
+
+        <li>
+            <a href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/">
+                <img src="assets/images/pictures/sands-of-life.jpg"  alt="Sands of Life" />
+            </a>
+            <h2><a href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/">How Music and Coding are so similar</a></h2>
+            <p>On the App Academy Blog.</p>
+            <span>by <a href="#">Adrian Jewell</a> &middot; July 2019</span>
+            <div>
+                <a href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/" class="read-more">Read more &rarr;</a>
+            </div>
+        </li>
+
+
+        <li>
+            <a href="https://github.com/Adrianjewell91/codesignalstudies">
+                <img src="assets/images/pictures/industrial-mech.jpg" alt="Industrial Mech" />
+            </a>
+            <h2><a href="https://github.com/Adrianjewell91/codesignalstudies">What can Machine Learning Do?</a></h2>
+            <p>After taking Ng's ML course.</p>
+            <span>by <a href="#">Adrian Jewell</a> &middot; November 2019</span>
+            <div>
+                <a href="https://github.com/Adrianjewell91/codesignalstudies" class="read-more">Read more &rarr;</a>
+            </div>
+        </li>
+
+        <li>
+            <a href="https://github.com/Adrianjewell91/adrianjewellportfolio/blob/master/assets/resume/software-resume.html.pdf">
+                <img src="assets/images/pictures/sahale-wa.jpg"  alt="Sahale Wa" />
+            </a>
+            <h2><a href="https://github.com/Adrianjewell91/adrianjewellportfolio/blob/master/assets/resume/software-resume.html.pdf">Resume</a></h2>
+            <p>Resume.</p>
+            <div>
+                <a href="https://github.com/Adrianjewell91/adrianjewellportfolio/blob/master/assets/resume/software-resume.html.pdf" class="read-more">Read more &rarr;</a>
+            </div>
+        </li>
+
+        <li>
+            <a href="https://www.youtube.com/channel/UCW9ml0UMFoXWNuyzKmXaO4w/videos">
+                <img src="assets/images/pictures/sands-of-life.jpg"  alt="Sands of Life" />
+            </a>
+            <h2><a href="https://www.youtube.com/channel/UCW9ml0UMFoXWNuyzKmXaO4w/videos">Piano Videos</a></h2>
+            <p>Some piano videos and performances.</p>
+            <div>
+                <a href="https://www.youtube.com/channel/UCW9ml0UMFoXWNuyzKmXaO4w/videos" class="read-more">Watch &rarr;</a>
+            </div>
+        </li>
+
+        <li>
+            <a href="https://soundcloud.com/adrianjewell/sets">
+                <img src="assets/images/pictures/sands-of-life.jpg"  alt="Sands of Life" />
+            </a>
+            <h2><a href="https://soundcloud.com/adrianjewell/sets">Piano Albums</a></h2>
+            <p>Classical Piano and Original Compositions</p>
+            <div>
+                <a href="https://soundcloud.com/adrianjewell/sets" class="read-more">Listen &rarr;</a>
+            </div>
+        </li>
+    </ul>
+
+
+</body>
 
 </html>
