--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 </head>
 <body>
-    <h1>Welcome to the blog for Adrian Jewell!</h1>
+    <h1>Welcome to the blog!</h1>
     <ul class="article-list-large">
 
         <li>
