--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <li>
             <a href="https://github.com/Adrianjewell91/essays/blob/main/README.md">
-                <img src="assets/images/pictures/industrial-mech.jpg" alt="Industrial Mech" />
+                <img src="images/madscience.png" alt="Industrial Mech" />
             </a>
             <h2><a href="https://github.com/Adrianjewell91/essays/blob/main/README.md">Assorted Short Essays</a></h2>
             <p>The spirit, playing the piano, books, China.</p>
@@ -59,7 +59,7 @@
 
         <li>
             <a href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/">
-                <img src="assets/images/pictures/sands-of-life.jpg"  alt="Sands of Life" />
+                <img src="images/appacademy.jpg"  alt="Sands of Life" />
             </a>
             <h2><a href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/">How Music and Coding are so similar</a></h2>
             <p>On the App Academy Blog.</p>
@@ -72,7 +72,7 @@
 
         <li>
             <a href="https://github.com/Adrianjewell91/codesignalstudies">
-                <img src="assets/images/pictures/industrial-mech.jpg" alt="Industrial Mech" />
+                <img src="images/luggage.png" alt="Industrial Mech" />
             </a>
             <h2><a href="https://github.com/Adrianjewell91/codesignalstudies">What can Machine Learning Do?</a></h2>
             <p>After taking Ng's ML course.</p>
@@ -95,7 +95,7 @@
 
         <li>
             <a href="https://www.youtube.com/channel/UCW9ml0UMFoXWNuyzKmXaO4w/videos">
-                <img src="assets/images/pictures/sands-of-life.jpg"  alt="Sands of Life" />
+                <img src="images/adrian-jewell_2.jpg"  alt="Sands of Life" />
             </a>
             <h2><a href="https://www.youtube.com/channel/UCW9ml0UMFoXWNuyzKmXaO4w/videos">Piano Videos</a></h2>
             <p>Some piano videos and performances.</p>
@@ -106,7 +106,7 @@
 
         <li>
             <a href="https://soundcloud.com/adrianjewell/sets">
-                <img src="assets/images/pictures/sands-of-life.jpg"  alt="Sands of Life" />
+                <img src="images/pianocloud.png"  alt="Sands of Life" />
             </a>
             <h2><a href="https://soundcloud.com/adrianjewell/sets">Piano Albums</a></h2>
             <p>Classical Piano and Original Compositions</p>
